# usuba

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  CHANGES.md  Dummy  LICENSE  Makefile  README.md  Readme.md  TODO.md  _config.yml  bench_nist.pl  bench_perfs.pl  check_des.pl  cmp.pl  cmp_opts.pl  config.json  config.json.help  configure  configure.ml  configure.pl  convert_tables.ml  dune  dune-project  expand_array.ml  gather_res.pl  gen_nist_benchs.sh  gen_nist_benchs_masked.sh  index.html  install_deps.sh  install_deps_arch.sh  install_deps_debian.sh  instr.pl  instr_arm.pl  lexer.mll  ocaml_gen_naive.ml  ortho_rewriter.ml  reduce.pl  results.org  (+13 more)
AES/: .gitignore  Makefile  aes.c  benchAVX.c  input.txt  key_sched.c  sbox.c
DES/: make.sh  ref_usuba.c
TIFD/: main.c
_drafts/: bitslicing.md
_includes/: footer.html  head.html  header.html
_layouts/: post.html
_posts/: 2020-01-07-usuba-genesis.md  2020-01-14-bitslicing.md  2020-01-16-mslicing.md  2020-01-28-addition.md  2020-02-24-usuba-frontend.md  2020-02-24-usuba.md  2020-03-04-usubac-backend.md  2020-03-16-interleaving.md  2020-03-19-crypto-languages.md  2020-03-24-ace.md  2020-03-24-ascon.md  2020-03-25-AES.md  2020-03-26-chacha20.md  2020-03-28-CUDA-basics.md  2020-03-28-present.md  2020-03-28-serpent.md  2020-04-09-crypto-DSLs.md  2020-04-20-inlining.md  2020-05-09-scheduling.md  2020-06-06-backend.md  2020-06-27-masking.md  2020-07-02-tornado.md  2020-07-13-skiva.md  2020-08-09-eval.md  2020-08-16-future-work.md
_site/: feed.xml  index.html
arch/: AVX.h  AVX512.h  AltiVec.h  FAME.h  SSE.h  (+8 more)
src/: .gitignore  Makefile  abstract_syntax_tree.ml  ansi_terminal.ml  assert_lang.ml  ast_rewriter.ml  backtrace.ml  basic_utils.ml  bitslice_shift.ml  choose_instr.ml  clear_origins.ml  config.ml  config.mli  convert_tables.ml  dune  errors.ml  expand_array.ml  expand_const.ml  expand_permut.ml  gen_z3.ml  gen_z3_bis.ml  hash_union.ml  ident.ml  ident.mli  inline.ml  interp.ml  lexer.mll  lib.v  main.ml  model.v  naive_rewriter.ml  norm_bitslice.ml  norm_tuples.ml  norm_uintn.ml  normalize.ml  ocaml_gen.ml  ocaml_gen_naive.ml  ocaml_gen_ortho.ml  optimize.ml  ortho_rewriter.ml  (+44 more)
src/backend/armv7/: armv7.ml
src/c_gen/: gen_bench_runtime.ml  gen_no_runtime.ml  gen_std_runtime.ml  interleave.ml  nodes_to_c.ml  nodes_to_c_fdti.ml  nodes_to_c_masked.ml  nodes_to_c_ua_masked.ml  nodes_to_jasmin.ml  usuba_to_c.ml  usuba_to_jasmin.ml
src/c_gen/runtimes/: genC_bench.ml  genC_omp_bench.ml  genC_omp_std.ml  genC_rand_bench.ml  genC_standalone.ml  genC_std.ml
src/des/: des  des.cmi  des.cmo  des.ml
src/maskverif/: usuba_to_maskverif.ml
src/normalization/: bitslice_shift.ml  clean.ml  convert_tables.ml  expand_array.ml  expand_const.ml  expand_multiples.ml  expand_parameters.ml  expand_permut.ml  fault_detection.ml  fix_all_params.ml  fix_clocks.ml  fix_dim.ml  init_scheduler.ml  mask.ml  monomorphize.ml  norm_bitslice.ml  norm_tuples.ml  norm_uintn.ml  normalize.ml  normalize_core.ml  normalize_inner_core.ml  remove_ctrl.ml  remove_sync.ml  sbox_index.ml  secure_loops.ml  shift_tuples.ml  slice.ml  ti_secure.ml  unfold_unnest.ml  unfold_unnest.ml.bkp  unroll.ml
src/optimization/: CSE.ml  CSE_CF_CP.ml  constant_folding.ml  copy_propagation.ml  fuse_loop_general.ml  fuse_loops.ml  get_live_var.ml  inline.ml  inline_core.ml  inplace.ml  interleave.ml  linearize_arrays.ml  optimize.ml  pre_schedule.ml  remove_dead_code.ml  scheduler.ml  share_var.ml  simple_opts.ml  vital_inline.ml
src/parsing/: dune  lexer.mll  parse_file.ml  parser.messages  parser.mly  parser_api.ml  parser_helper.ml
src/perf_comp/: des_v1_naive.ml  des_v1_ortho.ml
src/tests/: complete_prog_1.prog  des.prog  des_main.prog  des_v0.prog  des_v1.prog  dummy_double_in.prog  fill_advanced.prog  fill_i.prog  multiple_nodes.prog  nested_merge.prog  nested_merge.prog~  ortho_fby.prog  s-box-4.prog  simple_double_outv2.prog  simple_fby.prog  simple_merge.prog  simple_node.prog  simple_when.prog  test_CSE.ml  test_constant_folding.ml  test_copy_propagation.ml  test_monomorphize.ml  test_pass_runner.ml  test_remove_dead_code.ml
src/tests/ocaml_run/: a.out  alternative_fby_naive.ml  alternative_fby_ortho.ml  and_naive.ml  array_node_ortho.ml  array_var_naive.ml  complete_prog_1_naive.ml  complete_prog_1_ortho.ml  des  des.cmi  des.cmx  des.ml  des_cbc_main_naive.ml  des_naive.ml  des_ortho.ml  des_plus.ml  des_plus.ml~  des_v1_naive.ml  des_v1_ortho.ml  double_out_naive.ml  double_out_ortho.ml  dummy_double_in_ortho.ml  fill_advanced_naive.ml  fill_advanced_ortho.ml  fill_i_naive.ml  fill_i_ortho.ml  multiple_nodes_naive.ml  ocaml_runtime.cmi  ocaml_runtime.cmx  ocaml_runtime.ml  ortho_fby_ortho.ml  s-box-4.ml  s-box-4_naive.ml  simple_double_outv2_naive.ml  simple_double_outv2_ortho.ml  simple_fby_naive.ml  simple_fby_ortho.ml  simple_node_ortho.ml  table_sbox_naive.ml  test_fby.ml  (+1 more)
src/tests/verif_sbox/: comp_sboxes.ml
src/tightprove/: print_tp.ml  tightprove.ml  tightprove_to_usuba.ml  tp_AST.ml  tp_IO.ml  usuba_to_tightprove.ml
src/tightprove/parsing/: dune  lexer_tp.mll  parser_api_tp.ml  parser_tp.mly
src/verification/: bdd_verif.ml  clock_checker.ml  gen_z3.ml  soundness.ml  type_checker.ml  variable_binding.ml  z3_declare-assert.ml
src/verification/smt/: gen_smt.ml
(+2550 files in other folders)
